--- a/Proyect_3.html
+++ b/Proyect_3.html
@@ -149,7 +149,7 @@
       </div>
       <div class="embed-actions">
         <!-- Optional: open in new tab -->
-        <a class="btn-outline" href="YOUR_LOOKER_STUDIO_EMBED_URL" target="_blank" rel="noopener">Open in new tab</a>
+        <a class="btn-outline" href="https://lookerstudio.google.com/embed/reporting/95a8098a-94a7-42c9-8bb3-1d0ba3d0b18f/page/p_waqphi9gtd" target="_blank" rel="noopener">Open in new tab</a>
       </div>
     </div>
 
