--- a/index.html
+++ b/index.html
@@ -132,6 +132,103 @@
     .right-col{border-left:0;padding-left:0;}
     .right-col:before{display:none;}
   }
+
+  /* ===== SPLIT LAYOUT (foto+what i do IZQ / projects DER) ===== */
+.split {
+  position: relative;
+  width: 100%;
+}
+
+/* divisor centrado en pantalla (solo desktop) */
+@media (min-width: 1024px){
+  .center-divider{
+    position: fixed;          /* se queda clavado mientras scrolleás */
+    left: 50vw;               /* exactamente al centro del viewport */
+    top: 88px;                /* debajo del header sticky (ajustá si cambia) */
+    bottom: 0;
+    width: 1.5px;
+    background: #E5E7EB;
+    z-index: 0;
+  }
+}
+
+/* grilla 2 columnas: 50% pantalla a la izquierda, resto a la derecha */
+@media (min-width: 1024px){
+  .split-grid{
+    display: grid;
+    grid-template-columns: 50vw 1fr;
+    align-items: start;
+  }
+}
+
+/* contenedores internos con padding consistente */
+.split-left,
+.split-right{
+  padding: 2rem;
+}
+
+/* que el contenido pase por delante del divisor */
+.split-left > *, .split-right > * { position: relative; z-index: 1; }
+
+/* izquierda: columna vertical (foto arriba, what i do debajo) */
+.left-stack{
+  max-width: 720px;
+  margin: 0 auto 0  max(2rem, calc((50vw - 720px) / 2)); /* centra/aprovecha el ancho izq */
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+}
+
+/* foto compacta y prolija */
+.left-photo{
+  border-radius: var(--radius);
+  box-shadow: var(--shadow);
+  overflow: hidden;
+}
+.left-photo img{
+  display: block;
+  width: 100%;
+  max-height: 420px;          /* compacta la altura */
+  object-fit: cover;
+}
+
+/* caja WHAT I DO pegada a la foto (sin “salto”) */
+.left-whatido{
+  background: var(--card);
+  border-radius: var(--radius);
+  box-shadow: var(--shadow);
+  padding: 1.5rem;
+}
+.left-whatido h2{
+  margin: 0 0 .5rem;
+  font-size: 1rem;
+  letter-spacing: .06em;
+  text-transform: uppercase;
+  color: #374151;
+  text-align: center;
+}
+.left-whatido p{
+  margin: 0 0 .75rem;
+  line-height: 1.65;
+  font-size: 1rem;
+  color: #1F2937;
+}
+.left-whatido .skills{ display:flex; flex-wrap:wrap; gap:.5rem; margin-top:.5rem; }
+.left-whatido .chip{ padding:.4rem .65rem; border-radius:999px; background:#F3F4F6; border:1px solid #E5E7EB; font-size:.9rem; color:#374151; }
+
+/* derecha: alineamos Projects y subimos un toque el título */
+.split-right .section{ padding-top: 1rem; }
+.split-right .section h2{ text-align: left; margin-left: .125rem; }
+
+/* mobile: se apila todo y ocultamos el divisor */
+@media (max-width: 1023px){
+  .center-divider{ display:none; }
+  .split-grid{ display:block; }
+  .left-stack{ margin: 0; }
+  .left-photo img{ max-height: 320px; }
+}
+
+  
   </style>
 </head>
 <body>
@@ -158,36 +255,36 @@
   </header>
 
   <!-- Título -->
-  <section class="hero">
-    <div class="hero-header">
-      <h1>Data Analyst &amp; Economist</h1>
-    </div>
-  </section>
+  <section class="split" id="top">
+  <!-- divisor centrado fijo -->
+  <span class="center-divider" aria-hidden="true"></span>
 
-  <!-- Layout principal: izquierda (foto + what I do) / derecha (proyectos con separador) -->
-  <main class="main-wrap">
-    <div class="layout">
-      <!-- Izquierda -->
-      <aside class="left-col" aria-label="Profile and What I do">
-        <div class="hero-photo">
+  <div class="split-grid">
+    <!-- IZQUIERDA: foto + what i do (apilados) -->
+    <div class="split-left">
+      <div class="left-stack">
+        <header class="hero-header" style="margin-bottom:.5rem;">
+          <h1 style="font-size:2.6rem;line-height:1.15;margin:.25rem 0;font-weight:800;color:var(--fg);">
+            Data Analyst &amp; Economist
+          </h1>
+        </header>
+
+        <div class="left-photo">
           <img src="images/Selfie.jpg" alt="Lautaro Pereira Basile portrait">
         </div>
-        <section class="hero-whatido" aria-label="What I do">
+
+        <aside class="left-whatido" aria-label="What I do">
           <h2>WHAT I DO</h2>
           <p>
             I turn complex data into clear, actionable solutions. With experience in consulting and fintech,
             I specialize in extracting, modeling and visualizing information to uncover insights that improve
-            decision-making and operational efficiency. My focus is on building robust pipelines, automating
-            reports and designing intuitive dashboards that reveal trends, risks and opportunities—so stakeholders
-            can move faster with confidence.
+            decision-making and operational efficiency.
           </p>
           <p>
-            Day to day, that means writing efficient queries, optimizing datasets, and communicating findings
-            with crisp visuals tailored to business questions. I’m comfortable owning the full path from raw data
-            to decision: from BigQuery and Python transformations to KPI design and delivery in tools like Power BI,
-            Tableau or Looker Studio.
+            From BigQuery &amp; Python transformations to KPI design and delivery (Power BI / Tableau / Looker),
+            I own the path from raw data to decision—automation, dashboards and crisp communication.
           </p>
-          <div class="skills" aria-label="Core skills">
+          <div class="skills">
             <span class="chip">Python</span>
             <span class="chip">SQL / BigQuery</span>
             <span class="chip">Power BI</span>
@@ -196,40 +293,47 @@
             <span class="chip">Excel</span>
             <span class="chip">Git &amp; GitHub</span>
           </div>
-        </section>
-      </aside>
+        </aside>
+      </div>
+    </div>
 
-      <!-- Derecha (Proyectos) -->
-      <section class="right-col" aria-label="Projects">
-        <section id="projects" class="section">
-          <h2>Projects</h2>
-          <div class="grid">
-            <article class="card">
-              <img src="images/DIA.webp" alt="Web Scraper project cover">
-              <div class="card-content">
-                <h3>Web Scraper</h3>
-                <p>Tool to collect and analyze supermarket product data (prices, discounts, trends).</p>
-                <a class="btn-primary" href="Proyect_1.html">View Case Study</a>
-              </div>
-            </article>
-            <article class="card">
-              <img src="images/DV Dia.webp" alt="Data Visualization project cover">
-              <div class="card-content">
-                <h3>Data Visualization</h3>
-                <p>Interactive and static charts to explore a retail dataset and surface insights.</p>
-                <a class="btn-primary" href="Proyect_2.html">View Case Study</a>
-              </div>
-            </article>
-            <article class="card">
-              <img src="images/Uala.webp" alt="Fintech dashboard project cover">
-              <div class="card-content">
-                <h3>Dashboards</h3>
-                <p>Fintech Credit Area KPI dashboard for monitoring conversion, cohorts and risk.</p>
-                <a class="btn-primary" href="Proyect_3.html">View Case Study</a>
-              </div>
-            </article>
-          </div>
-        </section>
+    <!-- DERECHA: Projects (queda a la derecha del divisor) -->
+    <div class="split-right">
+      <section id="projects" class="section">
+        <h2>Projects</h2>
+        <div class="grid">
+          <article class="card">
+            <img src="images/DIA.webp" alt="Web Scraper project cover">
+            <div class="card-content">
+              <h3>Web Scraper</h3>
+              <p>Tool to collect and analyze supermarket product data (prices, discounts, trends).</p>
+              <a class="btn-primary" href="Proyect_1.html">View Case Study</a>
+            </div>
+          </article>
+
+          <article class="card">
+            <img src="images/DV Dia.webp" alt="Data Visualization project cover">
+            <div class="card-content">
+              <h3>Data Visualization</h3>
+              <p>Interactive and static charts to explore a retail dataset and surface insights.</p>
+              <a class="btn-primary" href="Proyect_2.html">View Case Study</a>
+            </div>
+          </article>
+
+          <article class="card">
+            <img src="images/Uala.webp" alt="Fintech dashboard project cover">
+            <div class="card-content">
+              <h3>Dashboards</h3>
+              <p>Fintech Credit Area KPI dashboard for monitoring conversion, cohorts and risk.</p>
+              <a class="btn-primary" href="Proyect_3.html">View Case Study</a>
+            </div>
+          </article>
+        </div>
+      </section>
+    </div>
+  </div>
+</section>
+
 
         <!-- CTA opcional bajo proyectos (podés quitarlo si no lo usás) -->
         <div class="cta">
